07_ingress/serviceAccount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-account
  namespace: default
  labels:
    project: example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
        project: example
    spec:
      containers:
      - image: hsj8314/account:v1
        name: account
        ports:
        - containerPort: 5000
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: service-account
  namespace: default
  labels:
    project: example
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: account
    project: example
