07_ingress/ingress_multi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-multi
  labels:
    name: ingress
    project: example
spec:
  ingressClassName: nginx      
  rules:
  - host: hsjmenu.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-menu
            port: 
              number: 80
  - host: hsjaccount.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-account
            port: 
              number: 80
  - host: hsjsales.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-sales
            port: 
              number: 80
